# eos-sidechain

./: README.md
MainChain/: README.md  eosio_build.sh
MainChain/contracts/cactus.msig/: cactus.msig.abi  cactus.msig.cpp
MainChain/libraries/chain/: controller.cpp
MainChain/libraries/chain/include/eosio/chain/: controller.hpp  types.hpp
MainChain/plugins/: CMakeLists.txt
MainChain/plugins/chain_plugin/: chain_plugin.cpp
MainChain/plugins/net_plugin/: net_plugin.cpp
MainChain/programs/cleos/: main.cpp
MainChain/programs/nodeos/: CMakeLists.txt
SideChain/libraries/chain/: controller.cpp
SideChain/libraries/chain/include/eosio/chain/: types.hpp
SideChain/plugins/: CMakeLists.txt
SideChain/plugins/client_plugin/: CMakeLists.txt  client_manager.cpp  client_plugin.cpp
SideChain/plugins/client_plugin/include/eosio/client_plugin/: client_manager.hpp  client_plugin.hpp
SideChain/plugins/confirm_plugin/: CMakeLists.txt  confirm_plugin.cpp
SideChain/plugins/confirm_plugin/include/eosio/confirm_plugin/: confirm_plugin.hpp
SideChain/programs/nodeos/: CMakeLists.txt
